Multi-file updater support, first untested version, *UOM DOES NOT WORK YET, SO MUST NOT BE DEPLOYED*. However it compiles and almost everything is implemented (except new-UOM, but including old-UOM).

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -2006,20 +2006,14 @@ UnknownContentTypeException.explanation=Your Freenet node does not know anything
 UnknownContentTypeException.title=Unknown and potentially dangerous content type: ${type}
 UnsupportedCharsetInFilterException.title=Unsupported text character set: ${charset}.
 UnsupportedCharsetInFilterException.explanation=This is a very rare character set, not supported by Java, and it is quite likely that this is an attempt to bypass the content filter, or just corrupt data.
-UpdateDeployContext.cannotUpdateNoExtJar=Could not find freenet-ext.jar in wrapper.conf (did find freenet.jar: ${mainFilename})
-UpdateDeployContext.cannotUpdateNoJars=Could not find Freenet jars in wrapper.conf
-UpdateDeployContext.cannotUpdateNoMainJar=Could not find freenet.jar in wrapper.conf (did find freenet-ext.jar: ${extFilename})
+UpdateDeployContext.cannotUpdateNoMainJar=Could not find freenet.jar in wrapper.conf
 UpdateDeployContext.updateCatastrophe=CATASTROPHIC ERROR: Deleted ${old} but cannot rename ${new} to ${old} therefore FREENET WILL NOT START! Please resolve the problem by renaming ${new} to ${old} manually.
 UpdateDeployContext.updateFailedCannotDeleteOldConfig=Cannot delete ${old} so cannot rename over it. Update failed.
-UpdateDeployContext.updateFailedNonStandardConfig=Not able to update because of non-standard config: written main=${main} ext=${ext} - should not happen! Report this to the devs, include your wrapper.conf.
-UpdatedVersionAvailableUserAlert.alsoDownloadedNewExtJar=Your node has also downloaded a new version of the Freenet extra jar, version ${version}.
+UpdateDeployContext.updateFailedNonStandardConfig=Not able to update because of non-standard config: written main=${main} - should not happen! Report this to the devs, include your wrapper.conf.
 UpdatedVersionAvailableUserAlert.armed=Your node will automatically restart as soon as it has finished downloading and verifying the new version of Freenet.
 UpdatedVersionAvailableUserAlert.clickToUpdateASAP=Click below to update your node as soon as the update has been verified.
 UpdatedVersionAvailableUserAlert.clickToUpdateNow=Click below to update your node immediately.
-UpdatedVersionAvailableUserAlert.downloadedNewExtJar=Your node has downloaded a new version of the Freenet extra jar, version ${version}.
 UpdatedVersionAvailableUserAlert.downloadedNewJar=Your node has downloaded a new version of Freenet, version ${version}.
-UpdatedVersionAvailableUserAlert.fetchingNewBoth=Your node is currently downloading a new version of Freenet (node version ${nodeVersion} and extra jar version ${extVersion}).
-UpdatedVersionAvailableUserAlert.fetchingNewExt=Your node is currently downloading a new version of Freenet (extra jar version ${extVersion}).
 UpdatedVersionAvailableUserAlert.fetchingNewNode=Your node is currently downloading a new version of Freenet (node version ${nodeVersion}).
 UpdatedVersionAvailableUserAlert.fetchingUOM=Freenet is downloading a new version from your peers. Your copy of Freenet is seriously out of date, so your peers may not show up as connected, but we can still fetch the update from them. This can take up to an hour. In the meantime you may not be able to use Freenet normally. If all else fails you can try the update script ${updateScript} but it is much safer to wait for the update.
 UpdatedVersionAvailableUserAlert.finalCheck=Your node is currently doing a final check to verify the security of the update (${count} of ${max}, maximum time remaining ${time}).
