--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1237,6 +1237,7 @@ NodeStats.timeoutFractions=Timeouts in queueing
 NodeStats.transfersTimedOut=Transfers timed out
 NodeStats.unsuccessfulHeader=Unsuccessful
 NodeStats.valueTooLow=This value is too low for that setting, increase it!
+MainJarUpdater.fetchingDependencies=Fetching jars required by the new build
 NodeUpdateManager.enabled=Check for, and download new versions
 NodeUpdateManager.enabledLong=Should your node automatically check for new versions of Freenet. If yes, new versions will be automatically detected and downloaded, but not necessarily installed. This setting resets itself always back to false unless your Freenet node runs within the wrapper.
 NodeUpdateManager.extURI=Where should Freenet look for updates to freenet-ext.jar?
