--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -2011,6 +2011,7 @@ UpdateDeployContext.updateFailedNonStandardConfig=Not able to update because of 
 UpdatedVersionAvailableUserAlert.armed=Your node will automatically restart as soon as it has finished downloading and verifying the new version of Freenet.
 UpdatedVersionAvailableUserAlert.clickToUpdateASAP=Click below to update your node as soon as the update has been verified.
 UpdatedVersionAvailableUserAlert.clickToUpdateNow=Click below to update your node immediately.
+UpdatedVersionAvailableUserAlert.brokenDependencies=There has been some sort of problem fetching the jars required for the next version, so Freenet cannot update itself to build ${version}. However, if it finds a later version, it will try again. You can see more details in wrapper.log.
 UpdatedVersionAvailableUserAlert.downloadedNewJar=Your node has downloaded a new version of Freenet, version ${version}.
 UpdatedVersionAvailableUserAlert.fetchingNewNode=Your node is currently downloading a new version of Freenet (node version ${nodeVersion}).
 UpdatedVersionAvailableUserAlert.fetchingUOM=Freenet is downloading a new version from your peers. Your copy of Freenet is seriously out of date, so your peers may not show up as connected, but we can still fetch the update from them. This can take up to an hour. In the meantime you may not be able to use Freenet normally. If all else fails you can try the update script ${updateScript} but it is much safer to wait for the update.
