Fix l10n for OS change (All -> Unknown)

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1675,7 +1675,7 @@ OperatingSystemName.Linux=Linux
 OperatingSystemName.MacOS=MacOS
 OperatingSystemName.FreeBSD=FreeBSD
 OperatingSystemName.GenericUnix=UNIX
-OperatingSystemName.All=your operating system
+OperatingSystemName.Unknown=your operating system
 SecurityLevels.userAlertShortText=Security levels: Network: ${network}, Friends: ${friends}, Physical: ${physical}
 SecurityLevels.userAlertNetworkThreatLevel=Protection against a stranger attacking you over the Internet: ${level}
 SecurityLevels.userAlertPhysicalThreatLevel=Protection if your computer is seized or stolen: ${level}
