Update URI must be a USK

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1260,6 +1260,7 @@ NodeUpdateManager.updateInstallers=Download the latest installers over Freenet?
 NodeUpdateManager.updateInstallersLong=Download the latest installers over Freenet? These will be linked from the "Add a Friend" page.
 NodeUpdateManager.updateURI=Where should Freenet look for updates?
 NodeUpdateManager.updateURILong=Where should your Freenet node look for updates? This should be a Freenet URI where updates can be downloaded from. The default URI ends in /update/(version number). To download the source code for an update, you can copy the key below, and change "update" to "update-source". Similarly, "fullchangelog" gives you the long, developer-friendly list of changes, and "installer", "wininstaller", "seednodes" and "iptocountryv4" give other files.
+NodeUpdateManager.updateURIMustBeAUSK=Update URI must be a USK!
 NotEnoughNiceLevelsUserAlert.title=Not enough Nice levels available!
 NotEnoughNiceLevelsUserAlert.short=Not enough Nice levels available! Please run Freenet at a lower nice level.
 NotEnoughNiceLevelsUserAlert.content=Your node has detected that it is running at a high nice level. It can't perform well if they aren't enough levels available. Please lower the nice level you're node is running at (Look for PRIORITY in the run.sh file and lower its value)! Currently your node has ${available} levels to play with whereas it would need ${required}.
