--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -2008,6 +2008,7 @@ UpdateDeployContext.cannotUpdateNoMainJar=Could not find freenet.jar in wrapper.
 UpdateDeployContext.updateCatastrophe=CATASTROPHIC ERROR: Deleted ${old} but cannot rename ${new} to ${old} therefore FREENET WILL NOT START! Please resolve the problem by renaming ${new} to ${old} manually.
 UpdateDeployContext.updateFailedCannotDeleteOldConfig=Cannot delete ${old} so cannot rename over it. Update failed.
 UpdateDeployContext.updateFailedNonStandardConfig=Not able to update because of non-standard config: written main=${main} - should not happen! Report this to the devs, include your wrapper.conf.
+UpdateDeployContext.updateFailedInternalError=FAILED TO UPDATE FREENET: INTERNAL ERROR: ${reason}
 UpdatedVersionAvailableUserAlert.armed=Your node will automatically restart as soon as it has finished downloading and verifying the new version of Freenet.
 UpdatedVersionAvailableUserAlert.clickToUpdateASAP=Click below to update your node as soon as the update has been verified.
 UpdatedVersionAvailableUserAlert.clickToUpdateNow=Click below to update your node immediately.
