--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1260,6 +1260,7 @@ NodeUpdateManager.updateURI=Where should Freenet look for updates?
 NodeUpdateManager.updateURILong=Where should your Freenet node look for updates? This should be a Freenet URI where updates can be downloaded from. The default URI ends in /update/(version number). To download the source code for an update, you can copy the key below, and change "update" to "update-source". Similarly, "fullchangelog" gives you the long, developer-friendly list of changes, and "installer", "wininstaller", "seednodes" and "iptocountryv4" give other files.
 NodeUpdateManager.updateURIMustBeAUSK=Update URI must be a USK!
 NodeUpdateManager.updateURIMustHaveNoMetaStrings=Update URI must not have extra meta-strings, e.g. USK@blah,blah,blah/update/1430 not USK@blah,blah,blah/update/1430/
+NodeUpdateManager.updateFailedInternalError=FAILED TO UPDATE FREENET: INTERNAL ERROR: ${reason}
 NotEnoughNiceLevelsUserAlert.title=Not enough Nice levels available!
 NotEnoughNiceLevelsUserAlert.short=Not enough Nice levels available! Please run Freenet at a lower nice level.
 NotEnoughNiceLevelsUserAlert.content=Your node has detected that it is running at a high nice level. It can't perform well if they aren't enough levels available. Please lower the nice level you're node is running at (Look for PRIORITY in the run.sh file and lower its value)! Currently your node has ${available} levels to play with whereas it would need ${required}.
@@ -2008,7 +2009,6 @@ UpdateDeployContext.cannotUpdateNoMainJar=Could not find freenet.jar in wrapper.
 UpdateDeployContext.updateCatastrophe=CATASTROPHIC ERROR: Deleted ${old} but cannot rename ${new} to ${old} therefore FREENET WILL NOT START! Please resolve the problem by renaming ${new} to ${old} manually.
 UpdateDeployContext.updateFailedCannotDeleteOldConfig=Cannot delete ${old} so cannot rename over it. Update failed.
 UpdateDeployContext.updateFailedNonStandardConfig=Not able to update because of non-standard config: written main=${main} - should not happen! Report this to the devs, include your wrapper.conf.
-UpdateDeployContext.updateFailedInternalError=FAILED TO UPDATE FREENET: INTERNAL ERROR: ${reason}
 UpdatedVersionAvailableUserAlert.armed=Your node will automatically restart as soon as it has finished downloading and verifying the new version of Freenet.
 UpdatedVersionAvailableUserAlert.clickToUpdateASAP=Click below to update your node as soon as the update has been verified.
 UpdatedVersionAvailableUserAlert.clickToUpdateNow=Click below to update your node immediately.
