Clarify, this could be read as megaBITS and that's not how we parse it.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1026,7 +1026,7 @@ Node.errorApplyingConfig=Error while applying the new config : ${error}
 Node.forceBigShrink=Do large store shrinks immediately (bdbje-index store type only)
 Node.forceBigShrinkLong=Whether to do large store shrinks (over 10%) immediately (rather than waiting for the next node restart). Online shrinks do not preserve the most recently used data, so this is not recommended; use it only if you must have an immediate result. Specific to bdbje-index store type.
 Node.inBWLimit=Download bandwidth limit
-Node.inBWLimitLong=Download bandwidth limit. Freenet will try not to exceed this, but it is not very accurate. If set to -1 the download bandwidth limit will be 4x the upload bandwidth limit. Without units this is in bytes/second, and SI and IEC units are accepted, so things like 10 KiB/s or 1.5 mbps are okay.
+Node.inBWLimitLong=Download bandwidth limit. Freenet will try not to exceed this, but it is not very accurate. If set to -1 the download bandwidth limit will be 4x the upload bandwidth limit. Without units this is in bytes/second, and SI and IEC units are accepted, so things like 10 KiB/s or 1.5 mbps (meaning 10 kilobytes/sec and 1.5 megabytes/sec respectively) are okay.
 Node.invalidStoreSize=Store size must be at least 32MB
 Node.l10nLanguage=The language Freenet will use to display messages
 Node.l10nLanguageLong=This setting will change the language used to display messages.
@@ -1084,7 +1084,7 @@ Node.oneConnectionPerIPLong=Automatically drop friend connections when other fri
 Node.opennetEnabled=Enable insecure mode (automatically connect to untrusted nodes)?
 Node.opennetEnabledLong=Enable insecure mode (aka opennet)? If this is enabled, your Freenet node will automatically exchange node references with other untrusted nodes (Strangers as opposed to Friends). But this means that the fact that you are running a node is no longer private, and many attacks are much easier. If you know enough people running Freenet, you should stick to trusted (Friends) connections to them, and turn this off.
 Node.outBWLimit=Upload bandwidth limit
-Node.outBWLimitLong=Hard upload bandwidth limit. Freenet should almost never exceed this. Normally you should set this to no more than half the your internet connection's upload bandwidth, which is usually much less than your download bandwidth. Without units this is in bytes/second, and SI and IEC units are accepted, so things like 10 KiB/s or 1.5 mbps are okay.
+Node.outBWLimitLong=Hard upload bandwidth limit. Freenet should almost never exceed this. Normally you should set this to no more than half the your internet connection's upload bandwidth, which is usually much less than your download bandwidth. Without units this is in bytes/second, and SI and IEC units are accepted, so things like 10 KiB/s or 1.5 mbps (meaning 10 kilobytes/sec and 1.5 megabytes/sec respectively) are okay.
 Node.paddDataPackets=Pad data packets sent by this Freenet node with random data of random length? (READ WARNING BEFORE TURNING OFF!)
 Node.paddDataPacketsLong=Pad data packets sent by this Freenet node with random-length content? For security, on a single node, turning this off is bad; if a large part of the network starts doing it, we become very vulnerable to a passive attacker. However, it should improve performance, particularly the payload percentage. You have been warned!
 Node.passOpennetPeersThroughDarknet=Relay opennet noderefs through darknet peers?
