--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -468,6 +468,7 @@ FirstTimeWizardToadlet.bandwidthSelect=Select
 FirstTimeWizardToadlet.bandwidthPerSecond=/s
 FirstTimeWizardToadlet.bandwidthMonthlyNetTransfer=Monthly Net Transfer
 FirstTimeWizardToadlet.bandwidthErrorSettingTitle=Error Setting Bandwidth Limit
+FirstTimeWizardToadlet.bandwidthErrorSettingExplanation=Freenet did not understand the bandwidth limit you entered, or it was too small. Both upload and download bandwidth limits must be at least 5KB/sec (this is around 25GB/month).
 FirstTimeWizardToadlet.browserWarningPageTitle=Browser Security Advisory
 FirstTimeWizardToadlet.browserWarningShort=You must use a separate browser (or a browser with privacy/incognito mode) for Freenet!
 FirstTimeWizardToadlet.browserWarningShortRelativelySafe=You could use privacy mode or a separate browser to improve security
