Differentiate parsing and below-minimum errors.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -442,7 +442,7 @@ FirstTimeWizardToadlet.autoUpdateNoAutodeploy=Ask when a new version is availabl
 FirstTimeWizardToadlet.autoUpdateLong=Freenet can automatically keep itself up to date. Do you want it to:
 FirstTimeWizardToadlet.bandwidthCapPrompt=Does your internet connection have a monthly data limit?
 FirstTimeWizardToadlet.bandwidthLimitMonthlyTitle=Monthly Data Limit
-FirstTimeWizardToadlet.bandwidthLimitMonthly=Freenet can be configured to not exceed a data limit. How much data do you want to allow Freenet to use each month? Unfortunately, Freenet may have to be very slow in order to stay under the given limit. You can adjust these limits at any time from the ${bold}${coreSettings}${/bold} page.
+FirstTimeWizardToadlet.bandwidthLimitMonthly=Freenet can be configured to not exceed a data limit. How much data do you want to allow Freenet to use each month? Freenet may have to be very slow in order to stay under a given limit. The bandwidth limits will be set with the assumption that Freenet is always online, so actual bandwidth usage may be lower. You can adjust these limits at any time from the ${bold}${coreSettings}${/bold} page.
 FirstTimeWizardToadlet.bandwidthLimitRateTitle=Transfer Rate Limit
 FirstTimeWizardToadlet.bandwidthLimitRate=How fast is your Internet connection? Freenet should use no more than half of it. You can change this setting later on the ${bold}${coreSettings}${/bold} page. Note that 1 megabit (1Mbps) = 128 kilobytes per second (128KiB/s).
 FirstTimeWizardToadlet.bandwidthConnectionHeader=Connection type
@@ -463,12 +463,14 @@ FirstTimeWizardToadlet.bandwidthConnection100M=100 megabits (fibre)
 FirstTimeWizardToadlet.bandwidthCurrent=Current bandwidth limit
 FirstTimeWizardToadlet.bandwidthCustom=Enter a custom bandwidth limit
 FirstTimeWizardToadlet.bandwidthDownloadHeader=Download limit
+FirstTimeWizardToadlet.bandwidthMonthlyLow=The requested monthly limit of ${requested} GB/month is too low. With bandwidth limits set to the minimum, Freenet may use around ${minimum} GB/month if it is always online. If Freenet isn't always online it can be set to use higher bandwidth limits. To use the minimum limits, click ${useMinimum}.
+FirstTimeWizardToadlet.bandwidthMonthlyUseMinimum=Use Minimum
 FirstTimeWizardToadlet.bandwidthUploadHeader=Upload limit
 FirstTimeWizardToadlet.bandwidthSelect=Select
 FirstTimeWizardToadlet.bandwidthPerSecond=/s
 FirstTimeWizardToadlet.bandwidthMonthlyNetTransfer=Monthly Net Transfer
+FirstTimeWizardToadlet.bandwidthCouldNotParse=Unable to parse limit "${limit}", please try again.
 FirstTimeWizardToadlet.bandwidthErrorSettingTitle=Error Setting Bandwidth Limit
-FirstTimeWizardToadlet.bandwidthErrorSettingExplanation=Freenet did not understand the bandwidth limit you entered, or it was too small. Both upload and download bandwidth limits must be at least 5KB/sec (this is around 25GB/month).
 FirstTimeWizardToadlet.browserWarningPageTitle=Browser Security Advisory
 FirstTimeWizardToadlet.browserWarningShort=You must use a separate browser (or a browser with privacy/incognito mode) for Freenet!
 FirstTimeWizardToadlet.browserWarningShortRelativelySafe=You could use privacy mode or a separate browser to improve security
