Remove mentions of Freetalk from other pages.
Also includes Sone when listing that applications have not been
officially reviewed, and mentions Freetalk's performance problems on the
plugin page.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -131,8 +131,8 @@ BooleanOption.parseError=Unrecognized boolean: ${val} - try true or false
 ChatForumsToadlet.title=Talk to other people on Freenet
 ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}web link${/frost-web}) - The original Freenet discussion boards client. This has severe spam and denial of service problems, we strongly recommend you run one of the others. Like FMS, this is not part of Freenet, so you will have to install and run it yourself.
 ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System is a message boards client, which is actively maintained and has a largish community. It is not part of Freenet, so you will have to download it and run it yourself.
-ChatForumsToadlet.sone=${sone}Sone${/sone} - A person and follower centered discussion-system. This is a plugin for Freenet. Like Freetalk it requires the "web of trust" plugin.
-ChatForumsToadlet.content2=The Freenet team did not write or review Frost or FMS, and we cannot guarantee their quality. There are many other Freenet plugins and apps (wiki's, real time chat, social networking), you can find them yourself by browsing Freenet.
+ChatForumsToadlet.sone=${sone}Sone${/sone} - A person and follower centered discussion-system. This is a plugin for Freenet. It requires the WebOfTrust plugin.
+ChatForumsToadlet.content2=The Freenet team did not write or review Frost, FMS, or Sone, so we cannot guarantee their quality. There are many other Freenet plugins and apps (wikis, real time chat, social networking), you can find them yourself by browsing Freenet.
 ClockProblemDetectedUserAlert.title=Your computer's clock isn't on time.
 ClockProblemDetectedUserAlert.text=Freenet has detected that your computer's clock (time and date) isn't on time. It won't work properly until you fix it and restart Freenet.
 ClockProblemDetectedUserAlert.shortText=Your computer's clock isn't on time, so Freenet can't connect.
@@ -529,7 +529,7 @@ FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetStupid=You don't do anything
 FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetFriends=You only connect to your friends.
 FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetTrustworthy=Your friends are trustworthy (but strangers are always worse than friends).
 FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetNoSuspect=Possible attackers don't already know or suspect who or where you are: they only know you are a particular identity on Freenet.
-FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetChangeID=You change your anonymous identity occasionally (e.g. for Freetalk).
+FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetChangeID=You change your anonymous identity occasionally (e.g. on forums).
 FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetSSK=You always upload files safely. Freenet will remind you how to do this.
 FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetOS=Your friends keep their computers secure.
 FirstTimeWizardToadlet.opennetChoiceHowSafeIsFreenetBigPriv=You are part of a big network (e.g. the main Freenet which you get if enabling connecting to strangers) or part of a private network which the attackers do not know about.
@@ -1161,7 +1161,7 @@ NodeClientCore.encryptTempBucketsLong=Encrypt the temporary buckets? In some cas
 NodeClientCore.fileForClientStats=File to store client statistics in
 NodeClientCore.fileForClientStatsLong=File to store client throttling statistics in (used to decide how often to send requests)
 NodeClientCore.maxUSKFetchers=Maximum number of temporary  USK fetchers
-NodeClientCore.maxUSKFetchersLong=Maximum number of temporary background fetches for recently visited USKs (e.g. freesites). Note that clients and plugins (e.g. Freetalk) can subscribe to USKs, which does not count towards the limit.
+NodeClientCore.maxUSKFetchersLong=Maximum number of temporary background fetches for recently visited USKs (e.g. freesites). Note that clients and plugins (e.g. WebOfTrust) can subscribe to USKs, which does not count towards the limit.
 NodeClientCore.maxUSKFetchersMustBeGreaterThanZero=Must be greater than zero
 NodeClientCore.movingTempDirOnTheFlyNotSupported=Moving temp directory on the fly not supported at present
 NodeClientCore.persistentTempDir=Persistent temp files directory
@@ -1390,8 +1390,8 @@ PproxyToadlet.pluginDesc.XMLSpider=Obsolete tool to generate old format freesite
 PproxyToadlet.pluginDesc.Freereader=Tool to insert RSS and ATOM feeds as freesites.
 PproxyToadlet.pluginDesc.Library=Tool to search Freenet using old or new format search indexes.
 PproxyToadlet.pluginDesc.Spider=Tool to create and automatically upload new format freesite search indexes, by automatically following links from your bookmarks. Causes very heavy load on your Freenet node, don't use it unless you have a powerful computer! Requires that the Library plugin also be loaded.
-PproxyToadlet.pluginDesc.Freetalk=Experimental anonymous forum. Requires WebOfTrust.
-PproxyToadlet.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for Freetalk and other chat and social applications over Freenet.
+PproxyToadlet.pluginDesc.Freetalk=Experimental anonymous forum. Currently has severe performance and reliability problems. Requires WebOfTrust.
+PproxyToadlet.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for chat and social applications over Freenet.
 PproxyToadlet.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Requires WebOfTrust.
 PproxyToadlet.pluginFilename=Name
 PproxyToadlet.pluginGroup.communication=Communication
