Add Freenet Social Networking Guide to chat page.
As this guide covers real-time chat (FLIP) and social networks (of a
sort, Sone), the mention of additional software need not include them.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -131,8 +131,9 @@ BooleanOption.parseError=Unrecognized boolean: ${val} - try true or false
 ChatForumsToadlet.title=Talk to other people on Freenet
 ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}web link${/frost-web}) - The original Freenet discussion boards client. This has severe spam and denial of service problems, we strongly recommend you run one of the others. Like FMS, this is not part of Freenet, so you will have to install and run it yourself.
 ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System is a message boards client, which is actively maintained and has a largish community. It is not part of Freenet, so you will have to download it and run it yourself.
+ChatForumsToadlet.fsng=${fsng}Freenet Social Networking Guide${/fsng} - This unofficial guide can be very helpful in setting up these and other Freenet communication tools.
 ChatForumsToadlet.sone=${sone}Sone${/sone} - A person and follower centered discussion-system. This is a plugin for Freenet. It requires the WebOfTrust plugin.
-ChatForumsToadlet.content2=The Freenet team did not write or review Frost, FMS, or Sone, so we cannot guarantee their quality. There are many other Freenet plugins and apps (wikis, real time chat, social networking), you can find them yourself by browsing Freenet.
+ChatForumsToadlet.content2=The Freenet team did not write or review Frost, FMS, or Sone, so we cannot guarantee their quality. There are many other Freenet plugins and apps (such as wikis) which one can find by browsing Freenet.
 ClockProblemDetectedUserAlert.title=Your computer's clock isn't on time.
 ClockProblemDetectedUserAlert.text=Freenet has detected that your computer's clock (time and date) isn't on time. It won't work properly until you fix it and restart Freenet.
 ClockProblemDetectedUserAlert.shortText=Your computer's clock isn't on time, so Freenet can't connect.
