Add and use RequestStatus.getPreferredFilename(), which will use the URI or the filenames as appropriate.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1607,6 +1607,7 @@ QueueToadlet.warningUnsafeContentExplanation=The file you want to download is cu
 QueueToadlet.wipD=In Progress: Downloads (${size})
 QueueToadlet.wipDU=In Progress: Directory Uploads (${size})
 QueueToadlet.wipU=In Progress: Uploads (${size})
+RequestStatus.unknownFilename=unknown filename
 RequestStarterGroup.schedulerSSKInserts=Priority policy of the scheduler (SSK inserts)
 RequestStarterGroup.schedulerSSKRequests=Priority policy of the scheduler (SSK requests)
 RequestStarterGroup.schedulerCHKInserts=Priority policy of the scheduler (CHK inserts)
