--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1161,6 +1161,8 @@ NodeClientCore.encryptPersistentTempBuckets=Encrypt the persistent temporary buc
 NodeClientCore.encryptPersistentTempBucketsLong=Encrypt the persistent temporary buckets? In some cases (if you use hard-drive and swap encryption) it might not make sense to encrypt persistent temporary buckets. LEAVE THIS ALONE IF YOU DON'T KNOW WHAT YOU ARE DOING!
 NodeClientCore.encryptTempBuckets=Encrypt the temporary buckets? LEAVE THIS ALONE!
 NodeClientCore.encryptTempBucketsLong=Encrypt the temporary buckets? In some cases (if you use hard-drive and swap encryption) it might not make sense to encrypt temporary buckets. LEAVE THIS ALONE IF YOU DON'T KNOW WHAT YOU ARE DOING!
+NodeClientCore.migrateOldTempBucketsWhenNotFull=Migrate temporary buckets older than 5 minutes to disk even when below the memory limit?
+NodeClientCore.migrateOldTempBucketsWhenNotFullLong=Should Freenet migrate temporary buckets older than 5 minutes to disk periodically even when the total memory usage of the in-RAM temporary buckets is below the limit? Try this if you are severely short on memory. It's probably slightly safer to turn it off.
 NodeClientCore.fileForClientStats=File to store client statistics in
 NodeClientCore.fileForClientStatsLong=File to store client throttling statistics in (used to decide how often to send requests)
 NodeClientCore.maxUSKFetchers=Maximum number of temporary  USK fetchers
