change cachingFreenetStoreMaxSizeLong to cachingFreenetStoreMaxSize

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -988,7 +988,7 @@ Node.bandwidthMinimum=The requested bandwidth limit of ${limit} bytes/second is 
 Node.bindTo=IP address to bind to
 Node.bindToLong=IP address to bind to
 Node.bwlimitMustBePositive=Upload bandwidth limit must be positive.
-Node.cachingFreenetStoreMaxSizeLong=Maximum size of the caching of the all stores.
+Node.cachingFreenetStoreMaxSize=Maximum size of the caching for each store.
 Node.clientCacheType=Client cache type?
 Node.clientCacheTypeLong=If you set this to none there will be less evidence if your computer is seized, but your node will need to re-fetch every page you visit every time you visit it, reducing performance and making your requests more visible on the network; if you set it to ram, cached pages will only be remembered until shutting down this Freenet node and will take up RAM; the first-time wizard sets it to salt-hash, which stores visited freesites on disk, but encrypted and possibly passworded according to the physical security level (so securely deleting master.keys will wipe the client cache).
 Node.clientCacheSize=Size of the client cache? (bytes, MB, GB etc allowed)
