Localise the two revocation-fetch-fatally-failed panic messages.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1610,6 +1610,8 @@ QueueToadlet.warningUnsafeContentExplanation=The file you want to download is cu
 QueueToadlet.wipD=In Progress: Downloads (${size})
 QueueToadlet.wipDU=In Progress: Directory Uploads (${size})
 QueueToadlet.wipU=In Progress: Uploads (${size})
+RevocationChecker.revocationFetchFailedMaybeInternalError=The auto-update system has failed due to an unexpected error: "${detail}". This might be because the auto-update key has been compromized (e.g. stolen), so we have turned off auto-update as it may not be safe. However it might also be due to a local problem such as running out of disk space. If this is true, please fix the problem and restart Freenet. If this message does not go away, please seek help (but be careful, if the keys really are stolen the website might be compromized too). It might be useful to try fetching the key manually, but bear in mind it might have been inserted by an attacker: ${key}
+RevocationChecker.revocationFetchFailedFatally=The auto-update system has been compromized! The private key may have been stolen, so auto-update has been turned off permanently. The file that should explain what has happened cannot be fetched due to an unexpected error: "${detail}". Please try fetching the key manually (the key might have been inserted incorrectly e.g. be too big; for safety's sake we have to turn off auto-update straight away rather than wait for the whole key): ${key}
 RequestStatus.unknownFilename=unknown filename
 RequestStarterGroup.schedulerSSKInserts=Priority policy of the scheduler (SSK inserts)
 RequestStarterGroup.schedulerSSKRequests=Priority policy of the scheduler (SSK requests)
