--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1619,9 +1619,9 @@ RequestStarterGroup.schedulerCHKInserts=Priority policy of the scheduler (CHK in
 RequestStarterGroup.schedulerCHKRequests=Priority policy of the scheduler (CHK requests)
 RequestStarterGroup.scheduler=Priority policy of the scheduler: hard (strictly by priority) or soft (randomize the priorities a bit)
 RequestStarterGroup.schedulerLong=Set the priority policy scheme used by the scheduler.
-RevocationKeyFoundUserAlert.text=Your node has found the auto-updater's revocation key on the network. It means that our auto-updating system is likely to have been COMPROMISED! Consequently, it has been disabled on your node to prevent "bad things" to be installed. We strongly advise you to check the project's website for updates. Please take care of verifying that the website hasn't been spoofed either. The revocation message is the following : ${message}.
+RevocationKeyFoundUserAlert.text=The Freenet auto-update system appears to have been compromized! A trusted member of the Freenet team has uploaded a special file to Freenet to say that the keys for the auto-updater have been stolen, leaked, or somebody has them who shouldn't. We have turned off auto-update to prevent malware from being installed on your computer. Please check the website ( https://freenetproject.org/ ) for updates, but be careful as that may not be secure either. The message is: ${message}
 RevocationKeyFoundUserAlert.textDisabled=The auto-updater has been disabled. This might be because of a local problem, such as running out of disk space, or the auto-updating system may have been compromised. The reason is: ${message}.
-RevocationKeyFoundUserAlert.title=The private key of the project has been compromised!
+RevocationKeyFoundUserAlert.title=URGENT: The Freenet auto-update system has been compromised!
 RevocationKeyFoundUserAlert.titleDisabled=The auto-updater may have been compromised! We have turned it off for now, please click for more details.
 SecurityLevels.title=Security levels
 SecurityLevels.tooltip=Configure your Freenet node's degree of security
