New probe request for proportion of requests rejected in each (bulk) category. Not tested yet!

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1066,6 +1066,8 @@ Node.probeStoreSizeShort=Respond to probe requests for store size
 Node.probeStoreSizeLong=If true freenet will respond to probe requests for store size. This is to improve knowledge of network conditions, and allow simulations to better reflect the actual network. It will add a small amount of random noise to make the information less identifiable but still useful for diagnostics. If false it will respond with a refusal.
 Node.probeUptimeShort=Respond to probe requests for uptime
 Node.probeUptimeLong=If true freenet will respond to probe requests for 48-hour or 7-day uptime percentage. This is to improve knowledge of network conditions, and allow simulations to better reflect the actual network. It will add a small amount of random noise to make the information less identifiable but still useful for diagnostics. If false it will respond with a refusal.
+Node.probeRejectStatsShort=Respond to probe requests for proportion of requests of various kinds rejected.
+Node.probeRejectStatsLong=If true, Freenet will respond to probe requests for the proportion of various kinds of requests which are being rejected. This returns an integer proportion if there have been more than 200 requests, for each category (CHK, SSK for insert, request) and it is updated every 10 minutes.
 Node.nodeName=Nickname for this Freenet node
 Node.nodeNameLong=Node nickname. This will be visible to your friends only.
 Node.notEnoughSpaceToAutoEncryptTitle=Insufficient disk space to encrypt the downloads queue!
