Make default cache size depend on memory limit.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -988,7 +988,7 @@ Node.bandwidthMinimum=The requested bandwidth limit of ${limit} bytes/second is 
 Node.bindTo=IP address to bind to
 Node.bindToLong=IP address to bind to
 Node.bwlimitMustBePositive=Upload bandwidth limit must be positive.
-Node.cachingFreenetStoreMaxSize=Maximum size of the in-memory cache for each store (there are 9 such stores). Keys are of various sizes, so e.g. if the limit is between 2K and 32K it will only be used for storing small keys (SSKs and public keys).
+Node.cachingFreenetStoreMaxSize=Maximum size of the in-memory cache for each store (there are 9 such stores).
 Node.cachingFreenetStorePeriod=Maximum time blocks will be kept in the in-memory datastore cache before being written to the store on disk.
 Node.clientCacheType=Client cache type?
 Node.clientCacheTypeLong=If you set this to none there will be less evidence if your computer is seized, but your node will need to re-fetch every page you visit every time you visit it, reducing performance and making your requests more visible on the network; if you set it to ram, cached pages will only be remembered until shutting down this Freenet node and will take up RAM; the first-time wizard sets it to salt-hash, which stores visited freesites on disk, but encrypted and possibly passworded according to the physical security level (so securely deleting master.keys will wipe the client cache).
@@ -1032,6 +1032,7 @@ Node.forceBigShrinkLong=Whether to do large store shrinks (over 10%) immediately
 Node.inBWLimit=Download bandwidth limit
 Node.inBWLimitLong=Download bandwidth limit. Freenet will try not to exceed this, but it is not very accurate. If set to -1 the download bandwidth limit will be 4x the upload bandwidth limit. Without units this is in bytes/second, and SI and IEC units are accepted, so things like 10 KiB/s or 1.5 mbps (meaning 10 kibibytes/sec and 1.5 megabytes/sec respectively) are okay.
 Node.invalidStoreSize=Store size must be at least 32MB
+Node.invalidMemoryCacheSize=Memory cache size must be at least 0. We won't actually cache any keys unless it is at least ~ 1200 bytes, and we won't cache CHKs unless it is ~ 33KB.
 Node.l10nLanguage=The language Freenet will use to display messages
 Node.l10nLanguageLong=This setting will change the language used to display messages.
 Node.masterKeyFile=Location of the master keys file
