Fix l10n, say it's in millis

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -990,7 +990,7 @@ Node.bindToLong=IP address to bind to
 Node.bwlimitMustBePositive=Upload bandwidth limit must be positive.
 Node.cachingFreenetStoreMaxSize=Maximum size of the in-memory cache for each store (there are 9 such stores).
 Node.cachingFreenetStoreMaxSizeLong=Maximum size of the in-memory cache for each store (there are 9 such stores). 0 for no in-memory cache (e.g. if you have a solid-state disk). Keys are of various sizes, so e.g. if the limit is between 2K and 32K it will only be used for storing small keys (SSKs and public keys).
-Node.cachingFreenetStorePeriod=Maximum time blocks will be kept in the in-memory datastore cache before being written to the store on disk.
+Node.cachingFreenetStorePeriod=Maximum time blocks will be kept in the in-memory datastore cache before being written to the store on disk (in milliseconds).
 Node.clientCacheType=Client cache type?
 Node.clientCacheTypeLong=If you set this to none there will be less evidence if your computer is seized, but your node will need to re-fetch every page you visit every time you visit it, reducing performance and making your requests more visible on the network; if you set it to ram, cached pages will only be remembered until shutting down this Freenet node and will take up RAM; the first-time wizard sets it to salt-hash, which stores visited freesites on disk, but encrypted and possibly passworded according to the physical security level (so securely deleting master.keys will wipe the client cache).
 Node.clientCacheSize=Size of the client cache? (bytes, MB, GB etc allowed)
