Show a useralert when we don't send requests due to too few connections.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1179,6 +1179,8 @@ NodeClientCore.startingUp=Please allow Freenet a few moments to complete the sta
 NodeClientCore.startingUpShort=Freenet is starting up, some things may not work and it may be slow.
 NodeClientCore.tempDir=Temp files directory. This can be cleared out when Freenet is not running.
 NodeClientCore.tempDirLong=Name of directory to put temporary files in
+NodeClientCore.tooFewConnectedNotSendingRequestsTitle=Freenet is waiting for connections
+NodeClientCore.tooFewConnectedNotSendingRequests=Freenet will not work until it has at least 3 connections, for security reasons. Please wait while we connect to the network. Or connect to some of your friends from the Add a Friend page.
 NodeClientCore.uploadAllowedDirs=Directories uploading is allowed from
 NodeClientCore.uploadAllowedDirsLong=Semicolon separated list of directories from which uploads are allowed. Empty means no uploads from disk allowed, "all" means uploads allowed from anywhere (including system files etc!). WARNING! If this is set to "all" any file on your computer can be uploaded by any user with access to FCP.
 NodeClientCore.useAIMDsRT=Use AIMDs for real-time requests? (EXPERTS ONLY)
